[OPYD-321] fixing admin toolbar on mobile white space

--- a/themes/openy_themes/openy_rose/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_header.scss
@@ -447,9 +447,6 @@
       margin-top: 0px;
     }
   }
-  .viewport {
-    margin-top:39px;
-  }
   .sidebar {
     top:109px;
   }
